<resources>
    <string name="app_name">Trailers</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="movie_title">Title</string>
    <string name="year_realeased">(Year)</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime %d</string>
    <string name="overview">Overview</string>
    <string name="tagline">Tagline</string>
    <string name="more_information">More Information</string>
    <string name="minutes">%d mins</string>
    <string name="audio_language">Audio Language</string>
    <string name="language">Language</string>
    <string name="budget">Budget</string>
    <string name="rating_value">%f</string>
    <string name="poster_image">Poster</string>
    <string name="video_title">Video Title</string>
    <string name="trailers">Trailers</string>
    <string name="budget_formatted">$%s</string>
    <string name="search_hint">Search movies</string>
    <string name="no_internet">No internet connection</string>
    <string name="header">Header</string>
</resources>
